# foodstuffs_recommendation

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  run.sh.example  secrets.sh.example
api/: handler.py  main.py  router.py
api/models/: target_product_model.py  target_product_model_image.py
api/src/: main.py  router.py
dashboard/: streamlit_app.py
dashboard/classes/: api_error.py
dashboard/src/: streamlit_app.py
docker/: Dockerfile  requirements.txt
notebooks/: research_alex.ipynb  research_alex_add.ipynb  research_ben.ipynb  results.ipynb
scripts/: create_api_database.py  full_train_text.py  image_clustering.py  image_prepocessing.py  images_downloader.py  parameters_tuning_image.py
tests/api/: test_api.py
tests/training/: test_utils_config.py
training/: config.yaml  image_clustering.py  image_prepocessing.py  main.py
training/handlers/: data_cleaning.py  data_loader.py  data_params.py  download_image.py  feature_engineering.py  text_processing.py  training.py
training/pipelines/: data_cleaning.py  data_loader.py  data_params.py  data_pipeline.py  feature_engineering.py  training_pipeline.py
training/pipelines/images/: training_pipeline.py
training/utils/: config.py  logger.py
