[tool.poetry]
name = "foodstuffs-recommendation"
version = "0.1.0"
description = "Find similar food products"
authors = ["alexandre <2a.alexandre@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
polars = "^1.12.0"
numpy = "^2.1.3"
plotly = "^5.24.1"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
