[tool.poetry]
name = "foodstuffs-recommendation"
version = "0.1.0"
description = "Find similar food products"
authors = ["alexandre <2a.alexandre@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
polars = "^1.12.0"
numpy = "^1.26.4"
plotly = "^5.24.1"
seaborn = "^0.13.2"
boto3 = "^1.35.56"
streamlit = "^1.40.0"
fastapi = {extras = ["standard"], version = "^0.115.4"}
mlflow = "^2.17.2"
scikit-learn = "^1.5.2"
gunicorn = "^23.0.0"
uvicorn = "^0.32.0"
pydantic = "^2.9.2"
spacy = "^3.7.5"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test_api = "unittest discover -s tests/api"
test_dashboard = "unittest discover -s tests/dashboard"
test_training = "unittest discover -s tests/training"
test_all = "unittest discover -s tests"
